# OpenGLDemo2

./: .gitignore  Animation.h  Animator.cpp  Animator.h  BTNPlayAndPause.h  BoneInfo.h  BtnInfo.cpp  CMakeLists.txt  CMakeLists.txt.user.ad6077a  CameraOpenGLWidget.cpp  CameraOpenGLWidget.h  Cube.cpp  Cube.h  FBXMesh.h  FBXModel.h  Floor.cpp  Floor.h  FrameBuffer.cpp  FrameBuffer.h  GameObject.cpp  GlewInit.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MyLCDNumber.h  MyLineEditWidget.cpp  MyLineEditWidget.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  MyPainter.cpp  MyPainter.h  MyPushButton.cpp  MyPushButton.h  MyQCheckBox.cpp  MyQCheckBox.h  MyQDial.cpp  MyQSlider.h  README.md  STBImage.cpp  (+13 more)
include/glad/: glad.h
shaders/: animationModelShader.vert  floorShader.frag  framebufferShader.frag  modelShader.frag  modelShader.vert
src/animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssimpGLMHelpers.cpp  AssimpGLMHelpers.h  Bone.cpp  Bone.h  BoneInfo.h
src/model/: Cube.h  FBXMesh.cpp  FBXModel.cpp  FBXTexture.h  FBXVertex.h  Floor.cpp  Info.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.h  Vertex.h
src/util/: FrameBuffer.cpp  GlewInit.h  STBImage.cpp  STBImage.h  Shader.cpp  Shader.h  Test.cpp  Test.h  Viewer.cpp  Viewer.h
src/widgets/: BTNPlayAndPause.cpp  BtnInfo.h  BtnMeshMode.cpp  BtnMeshMode.h  CameraOpenGLWidget.h  GameObject.h  MyLCDNumber.cpp  MyLineEditWidget.cpp  MyLineEditWidget.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  MyPainter.cpp  MyQDial.h  MyQSlider.cpp  MyQtWorker.cpp  MyQtWorker.h  MyThread.cpp  MyThread.h
